--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+ragnarok-kernel (01-1) stable; urgency=medium
+
+  * Fix: added missing preinst/postinst/prerm/postrm scripts.
+
+ -- Ian LeCorbeau <I-LeCorbeau@protonmail.com>  Sat, 26 Oct 2024 11:01:15 -0400
+
 ragnarok-kernel (01) stable; urgency=medium
 
   * Initial build of ragnarok's kernel metapackage.
